[build-system]
requires = ["setuptools", "setuptools-scm", "wheel", "numpy>=2.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pygetdata"
dependencies = ["numpy>=1.7"]
dynamic = ["version"]

[tool.setuptools]
script-files = ["../../util/dirfile2ascii", "../../util/checkdirfile"]

[tool.setuptools_scm]
version_scheme = "only-version"
local_scheme = "no-local-version"

