[build-system]
requires = ["scikit-build-core>=0.5", "numpy>=2.0", "setuptools-scm"]
build-backend = "scikit_build_core.build"

[project]
name = "pygetdata"
dependencies = ["numpy>=1.7"]
dynamic = ["version"]

[tool.scikit-build]
cmake.source-dir = "../../cmake"
cmake.build-type = "Release"
cmake.args = ["-DBUILD_PYTHON=ON", "-DGD_TEST=OFF", "-DGD_UTIL=ON"]
wheel.install-dir = "."

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.setuptools_scm"

[tool.setuptools_scm]
root = "../.."
version_scheme = "no-guess-dev"
local_scheme = "no-local-version"

